# org.luajit-bitop

./: .build  .build01_windows32.sh  .build02_windows64.sh  .build03_artefacts.sh  .build03_linux32.sh  .build04_artefacts.sh  .build04_linux64.sh  .build_common.sh  .docker01_build_on_ubuntu_1604_for_windows.sh  .docker02_build_on_ubuntu_1204.sh  .docker03_build_on_ubuntu_1404.sh  .docker04_build_on_ubuntu_1604.sh  .docker05_build_on_ubuntu_1610.sh  .gitignore  .lxc_build_artefacts.sh  .lxc_build_ubuntu_1404_x64.sh  .lxc_build_ubuntu_1404_x86.sh  .lxc_build_ubuntu_1604_x64.sh  .lxc_build_ubuntu_1604_x86.sh  .lxc_build_ubuntu_1610_x64.sh  .lxc_build_ubuntu_1610_x86.sh  .lxc_build_ubuntu_1704_x64.sh  .lxc_build_ubuntu_1704_x86.sh  .lxc_build_ubuntu_1710_x64.sh  .lxc_build_ubuntu_1710_x86.sh  .lxc_build_windows.sh  CMakeLists.txt  Jenkinsfile  bam.lua  build_artifact.py
.github/workflows/: main.yml
bitop/: CMakeLists.txt  __README__.txt  bit.lua
bitop/copy_over/: CMakeLists.txt
bitop/installer/lua5.1/: CMakeLists.txt  bitop.xml  install.lua  install_linux.lua  install_windows.lua
bitop/installer/lua5.2/: CMakeLists.txt  bitop.xml  install.lua
bitop/installer/lua5.4/: bitop.xml
cmake/: muhkuh_lua.cmake
cmake/toolchainfiles/: toolchain_ubuntu_arm64.cmake  toolchain_windows_32.cmake  toolchain_windows_64.cmake
installer/ivy/: CMakeLists.txt
installer/ivy/bitop/: CMakeLists.txt  install.xml  ivy.xml
installer/org.luajit-bitop/: lua5.4-bitop.xml  pom.xml
jonchki/: jonchkicfg.xml
