CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT("bitop")

ENABLE_TESTING()
FIND_PACKAGE(PythonInterp REQUIRED)

# Build the Lua module.
ADD_LIBRARY(TARGET_bit MODULE
            bit.c)
TARGET_INCLUDE_DIRECTORIES(TARGET_bit
                           PRIVATE ${LUA_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(TARGET_bit ${LUA_LIBRARIES})

# Set the name of the output file to "lfs".
SET_TARGET_PROPERTIES(TARGET_bit PROPERTIES PREFIX "" OUTPUT_NAME "bit")

# On mingw link all compiler libraries static.
IF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
	SET_PROPERTY(TARGET TARGET_bit PROPERTY LINK_FLAGS "-static -static-libgcc -static-libstdc++")
ENDIF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))

# Install the lua module.
INSTALL(TARGETS TARGET_bit
        EXPORT EXPORT_package
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        RUNTIME DESTINATION bin
        INCLUDES DESTINATION include)


# Add tests for this module.
IF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
	# Here are the MinGW specific tests.
	ADD_TEST(NAME bit_MinGW_DLL_dependencies
	         COMMAND "${PYTHON_EXECUTABLE}" ${TEST_SCRIPT_FOLDER}/mingw_dll_dependencies.py -u lua5.1 $<TARGET_FILE:TARGET_bit>)
ENDIF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
